--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -4,7 +4,7 @@
     padding: 10px;
     display: flex;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     box-sizing: border-box;
 
     @include respond-to('md') {
